WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
239793
[iOS] Focus changes unexpectedly when scrolling to a found text range
https://bugs.webkit.org/show_bug.cgi?id=239793
Summary
[iOS] Focus changes unexpectedly when scrolling to a found text range
Aditya Keerthi
Reported
2022-04-26 16:28:36 PDT
...
Attachments
Patch
(5.00 KB, patch)
2022-04-26 16:31 PDT
,
Aditya Keerthi
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Aditya Keerthi
Comment 1
2022-04-26 16:28:50 PDT
rdar://90996437
Aditya Keerthi
Comment 2
2022-04-26 16:31:25 PDT
Created
attachment 458408
[details]
Patch
Aditya Keerthi
Comment 3
2022-04-27 09:26:41 PDT
Comment on
attachment 458408
[details]
Patch Thanks for the review!
EWS
Comment 4
2022-04-27 10:37:18 PDT
Committed
r293519
(
250050@main
): <
https://commits.webkit.org/250050@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 458408
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug