[iOS] Focus changes unexpectedly when scrolling to a found text range https://bugs.webkit.org/show_bug.cgi?id=239793 rdar://90996437

Reviewed by Wenson Hsieh.

Source/WebKit:

* WebProcess/WebPage/WebFoundTextRangeController.cpp:
(WebKit::WebFoundTextRangeController::scrollTextRangeToVisible):

Specify `DoNotSetFocus` in the `TemporarySelectionOption`s to avoid
unnecessary focus changes when scrolling to a found text range.

Focus changes can cause the web view to regain first responder status
while searching for text, which will dismiss the find panel and end
the search session.

Tools:

Add an API test to ensure that scrolling to a found range does not
change focus.

* TestWebKitAPI/Tests/WebKitCocoa/FindInPage.mm:
(TEST):

Canonical link: https://commits.webkit.org/250050@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@293519 268f45cc-cd09-0410-ab3c-d52691b4dbfc